Fixed the Off center animation

--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
 body{
     margin: 0;
     padding: 0;
+
 }
 
 .loader-wrapper {
@@ -10,6 +11,7 @@ body{
     height: 100vh;
     background-color: #fff;
     z-index: 15000;
+    overflow-y: hidden !important;
   }
 
   .GaarXLogo {
@@ -19,11 +21,12 @@ body{
   }
 
   .RedLine {
-    animation: rotateAnimation 9s ease-in-out infinite;
-    transform-origin: center;
+    transform-origin: 415.244px 406.246px;
+    animation: rotateLine 9s ease-in-out infinite;
   }
 
-  @keyframes rotateAnimation {
+
+  @keyframes rotateLine {
     0% {
       transform: rotate(0deg);
     }
